<resources>
    <string name="app_name" translatable="false">IDRA</string>
    <string name="START">START</string>
    <string name="title_activity_map" translatable="false">Map</string>
    <string name="tut1">The app to stay hydrated</string>
    <string name="tut2.1.1">Look for drinking water sources</string>
    <string name="tut2.1.2">closer to you</string>
    <string name="tut2.2.1">Add new water sources</string>
    <string name="tut2.2.2">that are not yet</string>
    <string name="tut3">Remember to stay hydrated</string>
    <string name="signin">sign in</string>
    <string name="no_location">This app needs location permission to work</string>
    <string name="NearWaterSources">nearby</string>
    <string name="created_by">Created By</string>
    <string name="logout">logout</string>
    <string name="report">report a problem</string>
    <string name="no_description">This water source does not have description. Be the first to write one.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="addPhoto">Add photo</string>
    <string name="newWaterSource">New water source</string>
    <string name="cancel">cancel</string>
    <string name="create">Create</string>
    <string name="nameRequired">Name required</string>
    <string name="locationRequired">Location required</string>
    <string name="photoAdded">Photo added!</string>
    <string name="accept">accept</string>
    <string name="errorTryAgainLater">Error, try again later</string>
    <string name="Done">Done</string>
    <string name="Anonymous">Anonymous</string>
    <string name="SelectPhoto">Select photo</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="ModMenu">Mod menu</string>
    <string name="AddMod">Add mod</string>
    <string name="TypeOfProblem">Type of problem</string>
    <string name="incorrectPhoto">Incorrect/non-existent photography</string>
    <string name="incorrectDescription">Incorrect/non-existent description</string>
    <string name="NonExistentSource">Non-existent water source</string>
    <string name="Other">Other</string>
    <string name="ProblemDescription">Problem description</string>
    <string name="Send">Send</string>
    <string name="thanksIncident">Thank you. Your incident will be revised by moderators.</string>
    <string name="fillFields">Please, fill all fields</string>
    <string name="addWaterSource">Add water source</string>
    <string name="Incidents">Incidents</string>
    <string name="thanksPetition">Thank you. Your petition will be revised by moderators.</string>
    <string name="AcceptRequest">Accept request</string>
    <string name="DenyRequest">Deny request</string>
</resources>
