<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_addfuente"
    android:fillViewport="true"
    tools:context=".Interface.addFuente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/idra_mark" />

            <TextView
                android:id="@+id/textView4"
                style="@style/DefaultFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/newWaterSource" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="25"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/btn_round"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <fragment
                android:id="@+id/locationMapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/addFuenteMarker"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center" />

            </fragment>
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addPhotoTextView"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/addPhoto" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:onClick="addPhoto"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/add_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                style="@style/DefaultFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:textColor="#000000" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_round"
                android:backgroundTint="@color/blue2"
                android:onClick="create"
                android:text="@string/create" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>