<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/editTextColor"
    tools:context=".Interface.VistaFuente.ReportIncident">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/idra_mark" />

            <TextView
                android:id="@+id/tituloIncidencia"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                style="@style/DefaultFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TypeOfProblem"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_round"
                android:backgroundTint="@color/boxColor">

                <Spinner
                    android:id="@+id/typeOfProblemSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerViewIncident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                style="@style/DefaultFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelClick"
                android:text="@string/cancel" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:backgroundTint="@color/blue5"
                android:onClick="aceptarClick"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/Send"
                android:textColor="@color/white"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>