<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vista_fuente"
    android:fillViewport="true"
    tools:context=".Interface.VistaFuente">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/idra_mark" />

            <TextView
                android:id="@+id/tituloFuente"
                style="@style/DefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:textSize="20sp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/imageFuente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic[10]" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/metersTextView"
                    style="@style/DefaultFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/mVistaFuenteTextView"
                    style="@style/DefaultFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="m"
                    android:textColor="#000000" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/DefaultFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/created_by"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/createdByTextView"
                    style="@style/DefaultFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_content"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descripcionTextView"
                    style="@style/DefaultFont"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/no_description"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button3"
            style="@style/DefaultFont"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_round"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp" />

        <fragment
            android:id="@+id/mapFuente"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</ScrollView>